--- a/resources/css/components/combobox.css
+++ b/resources/css/components/combobox.css
@@ -1,6 +1,7 @@
 .prvious-combobox-input-ctn {
     position: relative;
     width: 100%;
+    padding: calc(var(--spacing, 0.25rem) * 2);
 }
 
 .prvious-combobox-input-value-ctn {
@@ -9,15 +10,16 @@
 
 .prvious-combobox-input-search-ctn {
     margin-bottom: 0.5rem;
+
+    input {
+        border: 1px solid var(--gray-300);
+        border-radius: 0.5rem;
+    }
 }
 
 .prvious-combobox-options-wrapper {
     max-height: 15rem;
     overflow-y: auto;
-    border-width: 1px;
-    border-style: solid;
-    border-color: rgb(var(--gray-200));
-    border-radius: 0.375rem;
     background: white;
 
     &::-webkit-scrollbar {
@@ -40,7 +42,6 @@
 
 .dark .prvious-combobox-options-wrapper {
     background: rgb(var(--gray-900));
-    border-color: rgb(var(--gray-700));
 
     &::-webkit-scrollbar-thumb {
         background: rgb(var(--gray-600));
